어바웃 페이지 1차 개선

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,10 +32,9 @@ body {
 
 body {
   word-break: keep-all;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 body::-webkit-scrollbar {
-  display: none;
 }
 * {
   box-sizing: border-box;
