--- a/src/components/pages/project_detail/projectDetail.module.css
+++ b/src/components/pages/project_detail/projectDetail.module.css
@@ -7,7 +7,7 @@
 }
 .wrapper::before{
     position: absolute;
-    background: linear-gradient(to right, #fff 50%, transparent);
+    background: linear-gradient(to right, #fff 70%, transparent 130%);
     width: 100%;
     height: 100%;
     content: '';
@@ -19,7 +19,7 @@
 }
 .wrapper::after{
     position: absolute;
-    background: linear-gradient(to right, #222 50%, transparent);
+    background: linear-gradient(to right, #222 70%, transparent 130%);
     width: 100%;
     height: 100%;
     content: '';
@@ -107,7 +107,7 @@
     gap: 20px;
 }
 .titleText{
-    font-size: 25px;
+    font-size: 30px;
     font-family:'Aldrich';
     font-weight: 500;
     opacity: 0;
@@ -187,7 +187,7 @@
     content: "";
     position: absolute;
     inset: 0;
-    background: linear-gradient(to right, #f5f5f5 40%, transparent);
+    background: #f5f5f5;
     transition: opacity 0.5s ease;
     pointer-events: none;
     opacity: 1;
@@ -196,7 +196,7 @@
     content: "";
     position: absolute;
     inset: 0;
-    background: linear-gradient(to right, #777 40%, transparent);
+    background: #777;
     transition: opacity 0.5s ease;
     pointer-events: none;
     opacity: 0;
@@ -333,12 +333,6 @@
     .skill .skillListContainer{
         padding: 20px;
         box-shadow: 0 0 20px rgba(0,0,0,0.5);
-    }
-    .skill .skillListContainer::before{
-        background: #f5f5f5;
-    }
-    .skill .skillListContainer::after{
-        background: #777;
     }
     .skill li{
         flex-basis: 20%;
