--- a/src/components/pages/project_detail/projectDetail.module.css
+++ b/src/components/pages/project_detail/projectDetail.module.css
@@ -182,25 +182,7 @@
     position: relative;
     overflow: hidden;
     opacity: 0;
-}
-.skill .skillListContainer::before{
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: #f5f5f5;
-    transition: opacity 0.5s ease;
-    pointer-events: none;
-    opacity: 1;
-}
-.skill .skillListContainer::after{
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: #777;
-    transition: opacity 0.5s ease;
-    pointer-events: none;
-    opacity: 0;
-    z-index: -1;
+    background-color: #f5f5f5;
 }
 .skill ul{
     margin-left: 0;
@@ -280,12 +262,10 @@
 :global(body.darkMode) .skill .subtitle::before{
     background-color: #fff;
 }
-:global(body.darkMode) .skill .skillListContainer::before{
-    opacity: 0;
+:global(body.darkMode) .skill .skillListContainer{
+    background-color: #777;
 }
-:global(body.darkMode) .skill .skillListContainer::after{
-    opacity: 1;
-}
+
 :global(body.darkMode) .link a{
     color: #ccc;
 }
@@ -321,18 +301,15 @@
     .wrapper::after{
         background: #222;
     }
-    .backImage{
-        display: none;
-    }
-    .lightBackground{
-        background: #fff;
-    }
-    .darkBackground{
-        background: #222;
+    .titleText{
+        font-size: 25px;
     }
     .skill .skillListContainer{
         padding: 20px;
-        box-shadow: 0 0 20px rgba(0,0,0,0.5);
+        box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    }
+    .skill .skillListContainer::before{
+        background-color: #f5f5f5;
     }
     .skill li{
         flex-basis: 20%;
