--- a/src/components/pages/project_detail/projectDetail.module.css
+++ b/src/components/pages/project_detail/projectDetail.module.css
@@ -3,7 +3,7 @@
     height: auto;
     color: #222;
     position: relative;
-    transition: .5s ease;
+    transition: background-color .5s ease, color .5s ease;
 }
 .wrapper::before{
     position: absolute;
@@ -301,22 +301,22 @@
     .wrapper::after{
         background: #222;
     }
+    .back{
+        height: 35px;
+    }
+    .back::after{
+        background-size: 35px 35px;
+        width: 35px;
+        height: 35px;
+        filter: invert(0);
+        transition: filter 0.5s ease;
+        cursor: pointer;
+    }
+    .projectTitle{
+        font-size: 36px;
+    }
     .titleText{
-        font-size: 25px;
-    }
-    .skill .skillListContainer{
-        padding: 20px;
-        box-shadow: 0 0 5px rgba(0,0,0,0.2);
-    }
-    .skill .skillListContainer::before{
-        background-color: #f5f5f5;
-    }
-    .skill li{
-        flex-basis: 20%;
-    }
-    .skill .skillIcon{
-        width: 40px;
-        height: 40px;
+        font-size: 23px;
     }
     .container{
         padding: 0 3%;
@@ -344,23 +344,33 @@
     margin-top: 20px;
     margin-left: 30px;
     }
-    .listBlock ul{
-        margin-left: 30px;
-    }
     .skill{
         margin-top: 20px;
-        margin-left: 30px;
+        margin-left: 0;
     }
     .skill ul{
         margin-left: 0;
         margin-top: 20px;
         display: flex;
-        gap: 20px;
+        gap: 10px;
         text-align: center;
         flex-wrap: wrap;
     }
     .skill .subtitle{
         margin-top: 30px;
     }
-
+    .skill .skillListContainer{
+        padding: 20px;
+        box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    }
+    .skill li{
+        flex-basis: 18%;
+    }
+    .skill .skillIcon{
+        width: 40px;
+        height: 40px;
+    }
+    .references ul{
+        margin-left: 30px;
+    }
 }
