--- a/src/components/layout/header/header.module.css
+++ b/src/components/layout/header/header.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 80px;
     display: flex;
-    padding: 10px 60px;
+    padding: 10px 80px;
     align-items: center;
     justify-content: space-between;
     position: fixed;
@@ -13,18 +13,17 @@
     transition: background-color 0.5s ease, color 0.5s ease;
 }
 .logoBox{
-    width: 160px;
     height: 60px;
-    text-align: center;
 }
 .logo{
     font-family: "Playfair Display", serif;
     font-weight: 600;
-    font-size: 50px;
+    font-size: 40px;
     border-top: 1px solid #222;
     border-bottom: 3px solid #222;
     cursor: pointer;
     transition: .5s ease;
+    line-height: 60px;
 }
 .navList{
     display: flex;
@@ -179,8 +178,8 @@
 @media screen and (max-width:730px) {
     .headerContainer{
         position: fixed;
-        height: 50px;
-        padding: 10px 20px;
+        height: 70px;
+        padding: 0 3.5%;
     }
     .headerContainer .logoBox{
         display: none;
