--- a/src/components/pages/home/home.module.css
+++ b/src/components/pages/home/home.module.css
@@ -271,7 +271,7 @@
     }
     .mainContent{
         width: 100%;
-        padding: 50px 20px 70px 20px;
+        padding: 70px 3.5% 70px 3.5%;
         gap: 20px;
         justify-content: flex-start;
     }
